--- a/api_knex/package.json
+++ b/api_knex/package.json
@@ -17,6 +17,7 @@
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.7",
     "@types/helmet": "^0.0.47",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/knex": "^0.16.1",
     "@typescript-eslint/eslint-plugin": "^3.9.0",
     "@typescript-eslint/parser": "^3.9.0",
@@ -36,6 +37,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "helmet": "^4.0.0",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.4",
     "sqlite3": "^5.0.0",
     "tsc": "^1.20150623.0"
