--- a/api_express_sequelize/package.json
+++ b/api_express_sequelize/package.json
@@ -40,7 +40,9 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
+    "husky": "^4.2.5",
     "jest": "^26.4.2",
+    "lint-staged": "^10.2.13",
     "nodemon": "^2.0.4",
     "sequelize-cli": "^6.2.0",
     "ts-jest": "^26.3.0",
