--- a/api_express_sequelize/tsconfig.json
+++ b/api_express_sequelize/tsconfig.json
@@ -12,5 +12,6 @@
     "forceConsistentCasingInFileNames": true,  /* Disallow inconsistently-cased references to the same file. */
     "strictPropertyInitialization": false,
   },
-  "exclude": ["node_modules"]
+  "include": ["./src"],
+  "exclude": ["node_modules", "./src/**/*.spec.ts"]
 }
