--- a/api_express_typeorm/tsconfig.json
+++ b/api_express_typeorm/tsconfig.json
@@ -16,5 +16,5 @@
     "strictPropertyInitialization": false,
   },
   "include": ["./src"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "./src/**/*.spec.ts"]
 }
