refactor: signin module, create basecontroller

--- a/api_express_sequelize/.vscode/launch.json
+++ b/api_express_sequelize/.vscode/launch.json
@@ -1,14 +1,24 @@
 {
-  // Use IntelliSense to learn about possible attributes.
-  // Hover to view descriptions of existing attributes.
-  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
     {
+      "name": "Launch",
       "type": "node",
+      "request": "launch",
+      "runtimeExecutable": "node",
+      "runtimeArgs": ["--nolazy", "-r", "ts-node/register/transpile-only", "-r", "tsconfig-paths/register"],
+      "args": ["src/main.ts"],
+      "cwd": "${workspaceRoot}",
+      "internalConsoleOptions": "openOnSessionStart",
+      "skipFiles": ["<node_internals>/**", "node_modules/**"]
+    },
+    {
+      "type": "node",
+      "name": "Attach",
       "request": "attach",
-      "name": "Node Debug",
+      "protocol": "inspector",
       "restart": true,
+      "skipFiles": ["<node_internals>/**"],
       "port": 9333
     }
   ]
