--- a/api_express_sequelize/.sequelizerc
+++ b/api_express_sequelize/.sequelizerc
@@ -1,8 +1,8 @@
 const {resolve} = require('path');
 
 module.exports = {
-  config: resolve(__dirname, 'src', 'core', 'infra', 'database', 'config', 'config.js'),
+  config: resolve(__dirname, 'src', 'core', 'infrastructure', 'database', 'config', 'config.js'),
   'models-path': resolve(__dirname, 'src', '**', '*.entity.ts'),
-  'migrations-path': resolve(__dirname, 'src', 'core', 'infra', 'database', 'migrations'),
-  'seeders-path': resolve(__dirname, 'src', 'core', 'infra', 'database', 'seeders'),
+  'migrations-path': resolve(__dirname, 'src', 'core', 'infrastructure', 'database', 'migrations'),
+  'seeders-path': resolve(__dirname, 'src', 'core', 'infrastructure', 'database', 'seeders'),
 }
