--- a/1.api_express_sequelize/package.json
+++ b/1.api_express_sequelize/package.json
@@ -20,8 +20,7 @@
     "helmet": "^4.1.1",
     "jsonwebtoken": "^8.5.1",
     "sequelize": "^6.3.5",
-    "sqlite3": "^5.0.0",
-    "tsc": "^1.20150623.0"
+    "sqlite3": "^5.0.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
