--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,5 @@
     "strictPropertyInitialization": false,
   },
   "include": ["./src"],
-  "exclude": ["node_modules", "./src/**/*.spec.ts"]
+  "exclude": ["node_modules", "./src/**/*.spec.ts", "./src/**/__test__"]
 }
