--- a/package.json
+++ b/package.json
@@ -19,12 +19,22 @@
     "test:coveralls": "NODE_ENV=development yarn run test:ci && coveralls < coverage/lcov.info",
     "prepare": "husky install"
   },
+  "dependencies": {
+    "awilix": "^4.3.4",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "helmet": "^4.6.0",
+    "pino": "^6.13.0"
+  },
   "devDependencies": {
     "@babel/cli": "^7.14.8",
     "@babel/core": "^7.14.8",
     "@babel/preset-env": "^7.14.8",
     "@babel/preset-typescript": "^7.14.5",
     "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/helmet": "^4.0.0",
     "@types/jest": "^26.0.24",
     "@types/node": "^16.4.7",
     "@types/pino": "^6.3.11",
@@ -45,10 +55,5 @@
     "ts-node": "^10.1.0",
     "tsconfig-paths": "^3.10.1",
     "typescript": "^4.3.5"
-  },
-  "dependencies": {
-    "awilix": "^4.3.4",
-    "dotenv": "^10.0.0",
-    "pino": "^6.13.0"
   }
 }
