--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
+    "joi": "^17.4.1",
     "pino": "^6.13.0"
   },
   "devDependencies": {
@@ -36,6 +37,7 @@
     "@types/express": "^4.17.13",
     "@types/helmet": "^4.0.0",
     "@types/jest": "^26.0.24",
+    "@types/joi": "^17.2.3",
     "@types/node": "^16.4.7",
     "@types/pino": "^6.3.11",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
