--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "express": "^4.17.1",
     "helmet": "^4.6.0",
     "joi": "^17.4.1",
-    "pino": "^6.13.0"
+    "pino": "^6.13.0",
+    "sequelize": "^6.6.5"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.8",
@@ -40,6 +41,7 @@
     "@types/joi": "^17.2.3",
     "@types/node": "^16.4.7",
     "@types/pino": "^6.3.11",
+    "@types/sequelize": "^4.28.10",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
     "@typescript-eslint/parser": "^4.28.5",
     "babel-plugin-module-resolver": "^4.1.0",
@@ -53,6 +55,7 @@
     "jest": "^27.0.6",
     "lint-staged": "^11.1.1",
     "nodemon": "^2.0.12",
+    "sequelize-cli": "^6.2.0",
     "ts-jest": "^27.0.4",
     "ts-node": "^10.1.0",
     "tsconfig-paths": "^3.10.1",
