--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "jest": "^27.0.6",
     "lint-staged": "^11.1.1",
     "nodemon": "^2.0.12",
+    "pino-inspector": "^0.1.0",
     "pino-pretty": "^5.1.2",
     "sequelize-cli": "^6.2.0",
     "ts-jest": "^27.0.4",
