--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "forceConsistentCasingInFileNames": true,  /* Disallow inconsistently-cased references to the same file. */
     "strictPropertyInitialization": false,
     "declaration": true,
+    "noImplicitAny": false,
     "paths": {
       "@app/*": ["applications/*"],
       "@business/*": ["business/*"],
