--- a/package.json
+++ b/package.json
@@ -12,16 +12,17 @@
     "build": "npm run build:js",
     "build:types": "tsc --emitDeclarationOnly",
     "build:js": "babel src --out-dir dist --extensions \".ts,.js\" --source-maps inline",
-    "test": "NODE_ENV=development jest --passWithNoTests --noStackTrace --runInBand --detectOpenHandles",
-    "test:watch": "NODE_ENV=development jest --watchAll --noStackTrace --runInBand",
-    "test:staged": "NODE_ENV=development yarn test -- --findRelatedTests src/",
-    "test:cov": "NODE_ENV=development jest --coverage --detectOpenHandles",
-    "test:coveralls": "NODE_ENV=development yarn run test:ci && coveralls < coverage/lcov.info",
+    "test": "NODE_ENV=test jest --passWithNoTests --noStackTrace --runInBand --detectOpenHandles",
+    "test:watch": "NODE_ENV=test jest --watchAll --noStackTrace --runInBand",
+    "test:staged": "NODE_ENV=test yarn test -- --findRelatedTests src/",
+    "test:cov": "NODE_ENV=test jest --coverage --detectOpenHandles",
+    "test:coveralls": "NODE_ENV=test yarn run test:ci && coveralls < coverage/lcov.info",
     "prepare": "husky install"
   },
   "dependencies": {
     "awilix": "^4.3.4",
     "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
@@ -35,6 +36,7 @@
     "@babel/core": "^7.14.8",
     "@babel/preset-env": "^7.14.8",
     "@babel/preset-typescript": "^7.14.5",
+    "@types/compression": "^1.7.1",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/helmet": "^4.0.0",
